# platform.upstream.xinput

./: configure.ac  project.config  xinput-1.6.0.tar.bz2.delta  xinput-1.6.0.tar.bz2.id
man/: Makefile.am  xinput.man
packaging/: xinput.changes  xinput.spec
src/: Makefile.am  hierarchy.c  list.c  property.c  setcp.c  test.c  test_xi2.c  transform.c  xinput.c  xinput.h
